kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-ui
  template:
    metadata:
      labels:
        app: frontend-ui
    spec:
      containers:
      - name: frontend-ui
        image: acrboulderai.azurecr.io/frontend-ui:v1
        ports:
        - containerPort: 5173
---

apiVersion: v1
kind: Service
metadata:
  name: frontend-ui-service
spec:
  type: LoadBalancer
  selector:
    app: frontend-ui
  ports:
  - port: 80
    targetPort: 5173
